@@ -15,6 +15,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import javax.swing.BorderFactory;
 import javax.swing.JFrame;
@@ -22,10 +23,13 @@ import javax.swing.JLabel;
 import javax.swing.JPanel;
 import javax.swing.JScrollPane;
 import javax.swing.SwingUtilities;
+import javax.swing.WindowConstants;
 
+import d021248.group.Generator;
 import d021248.group.Group;
-import d021248.group.GroupHelper;
 import d021248.group.api.Element;
+import d021248.group.util.Point;
+import d021248.group.util.UIConstants;
 
 /**
  * Interactive Cayley graph visualizer.
@@ -51,27 +55,28 @@ public class CayleyGraphViewer<E extends Element> extends JPanel {
     private static final int NODE_RADIUS = 25;
     private static final int ARROW_SIZE = 8;
 
-    private static class Point {
-        final int x, y;
-
-        Point(int x, int y) {
-            this.x = x;
-            this.y = y;
-        }
-    }
-
     public CayleyGraphViewer(Group<E> group) {
         this.group = group;
         this.elements = new ArrayList<>(group.elements());
 
-        // Get generators using GroupHelper strategy
-        GroupHelper<E> helper = new GroupHelper<>(group);
-        try {
-            this.generators = new ArrayList<>(helper.strategyGenerators());
-        } catch (Exception e) {
-            // Fallback: use all non-identity elements as generators for small groups
-            this.generators = new ArrayList<>();
-            E identity = group.identity();
+        // Try to find minimal generators, fallback to all non-identity elements
+        this.generators = new ArrayList<>();
+        E identity = group.identity();
+
+        // For small groups, try each element as potential generator
+        if (group.order() <= 20) {
+            for (E elem : elements) {
+                if (!elem.equals(identity)) {
+                    if (Generator.generate(group, Set.of(elem)).equals(group.elements())) {
+                        generators.add(elem);
+                        break; // Found a generator for cyclic groups
+                    }
+                }
+            }
+        }
+
+        // If no single generator found, use all non-identity elements for small groups
+        if (generators.isEmpty()) {
             for (E elem : elements) {
                 if (!elem.equals(identity) && generators.size() < 6) {
                     generators.add(elem);
@@ -84,7 +89,7 @@ public class CayleyGraphViewer<E extends Element> extends JPanel {
 
         this.positions = new HashMap<>();
         this.generatorColors = generateGeneratorColors(generators.size());
-        this.statusLabel = new JLabel("Click elements to highlight their generator paths");
+        this.statusLabel = new JLabel(UIConstants.CLICK_ELEMENTS_MSG);
 
         calculateCircularLayout();
         setBackground(Color.WHITE);
@@ -95,7 +100,7 @@ public class CayleyGraphViewer<E extends Element> extends JPanel {
         int n = elements.size();
         int centerX = 400;
         int centerY = 400;
-        int radius = Math.min(350, Math.max(150, n * 15));
+        int radius = (int) Math.clamp((long) n * 15, 150L, 350L);
 
         setPreferredSize(new Dimension(800, 800));
 
@@ -164,8 +169,8 @@ public class CayleyGraphViewer<E extends Element> extends JPanel {
     private E findElementAt(int x, int y) {
         for (Map.Entry<E, Point> entry : positions.entrySet()) {
             Point p = entry.getValue();
-            int dx = x - p.x;
-            int dy = y - p.y;
+            int dx = x - p.x();
+            int dy = y - p.y();
             if (dx * dx + dy * dy <= NODE_RADIUS * NODE_RADIUS) {
                 return entry.getKey();
             }
@@ -246,7 +251,7 @@ public class CayleyGraphViewer<E extends Element> extends JPanel {
                     g2.setStroke(new BasicStroke(2f));
                 }
 
-                drawArrow(g2, pFrom.x, pFrom.y, pTo.x, pTo.y);
+                drawArrow(g2, pFrom.x(), pFrom.y(), pTo.x(), pTo.y());
             }
         }
 
@@ -255,8 +260,8 @@ public class CayleyGraphViewer<E extends Element> extends JPanel {
 
     private void drawArrow(Graphics2D g2, int x1, int y1, int x2, int y2) {
         // Calculate direction
-        double dx = x2 - x1;
-        double dy = y2 - y1;
+        double dx = (double) x2 - x1;
+        double dy = (double) y2 - y1;
         double dist = Math.sqrt(dx * dx + dy * dy);
 
         if (dist < NODE_RADIUS * 2)
@@ -286,7 +291,7 @@ public class CayleyGraphViewer<E extends Element> extends JPanel {
     }
 
     private void drawNodes(Graphics2D g2) {
-        Font labelFont = new Font("SansSerif", Font.BOLD, 11);
+        Font labelFont = new Font(UIConstants.FONT_SANS_SERIF, Font.BOLD, 11);
         g2.setFont(labelFont);
         FontMetrics fm = g2.getFontMetrics();
 
@@ -312,21 +317,21 @@ public class CayleyGraphViewer<E extends Element> extends JPanel {
             // Highlight
             if (isSelected) {
                 g2.setColor(new Color(255, 255, 0, 150));
-                g2.fillOval(p.x - NODE_RADIUS - 8, p.y - NODE_RADIUS - 8,
+                g2.fillOval(p.x() - NODE_RADIUS - 8, p.y() - NODE_RADIUS - 8,
                         (NODE_RADIUS + 8) * 2, (NODE_RADIUS + 8) * 2);
             } else if (isHovered) {
                 g2.setColor(new Color(200, 200, 255, 100));
-                g2.fillOval(p.x - NODE_RADIUS - 5, p.y - NODE_RADIUS - 5,
+                g2.fillOval(p.x() - NODE_RADIUS - 5, p.y() - NODE_RADIUS - 5,
                         (NODE_RADIUS + 5) * 2, (NODE_RADIUS + 5) * 2);
             }
 
             // Draw node
             g2.setColor(fillColor);
-            g2.fillOval(p.x - NODE_RADIUS, p.y - NODE_RADIUS, NODE_RADIUS * 2, NODE_RADIUS * 2);
+            g2.fillOval(p.x() - NODE_RADIUS, p.y() - NODE_RADIUS, NODE_RADIUS * 2, NODE_RADIUS * 2);
 
             g2.setColor(isSelected ? Color.RED : Color.BLACK);
             g2.setStroke(new BasicStroke(isSelected ? 3f : 2f));
-            g2.drawOval(p.x - NODE_RADIUS, p.y - NODE_RADIUS, NODE_RADIUS * 2, NODE_RADIUS * 2);
+            g2.drawOval(p.x() - NODE_RADIUS, p.y() - NODE_RADIUS, NODE_RADIUS * 2, NODE_RADIUS * 2);
 
             // Draw label
             String label = elem.toString();
@@ -335,7 +340,7 @@ public class CayleyGraphViewer<E extends Element> extends JPanel {
             }
             int labelWidth = fm.stringWidth(label);
             g2.setColor(Color.BLACK);
-            g2.drawString(label, p.x - labelWidth / 2, p.y + 5);
+            g2.drawString(label, p.x() - labelWidth / 2, p.y() + 5);
         }
 
         g2.setStroke(new BasicStroke(1f));
@@ -346,11 +351,11 @@ public class CayleyGraphViewer<E extends Element> extends JPanel {
         int y = 20;
         int lineHeight = 25;
 
-        g2.setFont(new Font("SansSerif", Font.BOLD, 12));
+        g2.setFont(new Font(UIConstants.FONT_SANS_SERIF, Font.BOLD, 12));
         g2.setColor(Color.BLACK);
         g2.drawString("Generators:", x, y);
 
-        g2.setFont(new Font("SansSerif", Font.PLAIN, 11));
+        g2.setFont(new Font(UIConstants.FONT_SANS_SERIF, Font.PLAIN, 11));
         for (int i = 0; i < generators.size(); i++) {
             y += lineHeight;
             g2.setColor(generatorColors[i]);
@@ -400,7 +405,7 @@ public class CayleyGraphViewer<E extends Element> extends JPanel {
     public static <E extends Element> void show(Group<E> group, String title) {
         SwingUtilities.invokeLater(() -> {
             JFrame frame = new JFrame(title);
-            frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+            frame.setDefaultCloseOperation(WindowConstants.EXIT_ON_CLOSE);
 
             CayleyGraphViewer<E> viewer = new CayleyGraphViewer<>(group);
 
@@ -409,12 +414,12 @@ public class CayleyGraphViewer<E extends Element> extends JPanel {
 
             JPanel statusPanel = new JPanel(new BorderLayout());
             statusPanel.setBorder(BorderFactory.createEmptyBorder(5, 10, 5, 10));
-            viewer.getStatusLabel().setFont(new Font("SansSerif", Font.PLAIN, 12));
+            viewer.getStatusLabel().setFont(new Font(UIConstants.FONT_SANS_SERIF, Font.PLAIN, 12));
             statusPanel.add(viewer.getStatusLabel(), BorderLayout.WEST);
 
             JLabel info = new JLabel(String.format("Group order: %d  |  Generators: %d",
                     group.elements().size(), viewer.generators.size()));
-            info.setFont(new Font("SansSerif", Font.PLAIN, 12));
+            info.setFont(new Font(UIConstants.FONT_SANS_SERIF, Font.PLAIN, 12));
             statusPanel.add(info, BorderLayout.EAST);
 
             mainPanel.add(statusPanel, BorderLayout.SOUTH);
