@@ -18,9 +18,11 @@ import javax.swing.JLabel;
 import javax.swing.JPanel;
 import javax.swing.JScrollPane;
 import javax.swing.SwingUtilities;
+import javax.swing.WindowConstants;
 
 import d021248.group.Group;
 import d021248.group.api.Element;
+import d021248.group.util.UIConstants;
 
 /**
  * Interactive Swing viewer for Cayley operation tables.
@@ -115,7 +117,7 @@ public class CayleyTableViewer<E extends Element> extends JPanel {
         g2.fillRect(0, 0, cellSize, cellSize);
 
         // Draw headers
-        Font headerFont = new Font("SansSerif", Font.BOLD, Math.max(8, cellSize / 3));
+        Font headerFont = new Font(UIConstants.FONT_SANS_SERIF, Font.BOLD, Math.max(8, cellSize / 3));
         g2.setFont(headerFont);
 
         for (int i = 0; i < n; i++) {
@@ -192,10 +194,10 @@ public class CayleyTableViewer<E extends Element> extends JPanel {
     public static <E extends Element> void show(Group<E> group, String title) {
         SwingUtilities.invokeLater(() -> {
             JFrame frame = new JFrame(title);
-            frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+            frame.setDefaultCloseOperation(WindowConstants.EXIT_ON_CLOSE);
 
             int n = group.elements().size();
-            int cellSize = Math.max(20, Math.min(60, 800 / n));
+            int cellSize = Math.clamp(800 / n, 20, 60);
 
             CayleyTableViewer<E> viewer = new CayleyTableViewer<>(group, cellSize);
 
@@ -208,7 +210,7 @@ public class CayleyTableViewer<E extends Element> extends JPanel {
             statusPanel.add(viewer.getStatusLabel(), BorderLayout.WEST);
 
             JLabel infoLabel = new JLabel(String.format("Group order: %d  (hover over cells to see operations)", n));
-            infoLabel.setFont(new Font("SansSerif", Font.PLAIN, 12));
+            infoLabel.setFont(new Font(UIConstants.FONT_SANS_SERIF, Font.PLAIN, 12));
             statusPanel.add(infoLabel, BorderLayout.EAST);
 
             mainPanel.add(statusPanel, BorderLayout.SOUTH);
